alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ button {
   /* Change the background color as needed */
   color: #6c6a6a;
   /* Change the text color as needed */
-  padding: 10px 20px;
+
   /* Adjust padding as needed */
   position: fixed;
   width: 100%;
